<resources>
    <string name="app_name">Changa Hostels</string>
    <string name="nilkanth_rooms">Nilkanth Rooms</string>
    <string name="rooms">Rooms</string>
    <string name="nilkanth_dining">Nilkanth Dinging</string>
    <string name="nilkanth_dininghall">Nilkanth Dininghall</string>
    <string name="diining_hall">Dining Hall</string>
    <string name="nilkanth_fees">Nilkanth Fees</string>
    <string name="nilkanth_address">Nilkanth Address</string>


    <string name="nilkanth_room">Nilkanth Room</string>
    <string name="nilkanth_contact">Nilkanth Contact</string>
    <string name="nilkanth_special_facilities">Nilkanth Special Facilities</string>

    <string name="contact">Contact</string>
    <string name="special_facilities">Special Facilities</string>
    <string name="shreedeep_rooms">Shreedeep Rooms</string>
    <string name="shreedeep_dining">Shreedeep Dining</string>
    <string name="shreedeep_fees">Shreedeep Fees</string>
    <string name="shreedeep_address">Shreedeep Address</string>
    <string name="shreedeep_special_facilities">ShreeDeep Special Facilities</string>
    <string name="shreedeep_contact">Shreedeep Contact</string>
    <string name="darshan_hostel">Darshan Hostel</string>
    <string name="darshan_rooms">Darshan Rooms</string>
    <string name="darshan_dining">Darshan Dining</string>
    <string name="darshan_fees">Darshan Fees</string>
    <string name="darshan_address">Darshan Address</string>
    <string name="darshan_special_facilities">Darshan Special Facilities</string>
    <string name="darshan_contact">Darshan Contact</string>
    <string name="nisarg_room">Nisarg Room</string>
    <string name="nisarg_dining">Nisarg Dining</string>
    <string name="nisarg_fees">Nisarg Fees</string>
    <string name="nisarg_address">Nisarg Address</string>
    <string name="nisarg_special_facilities">Nisarg Special Facilities</string>
    <string name="nisarg_contacts">Nisarg Contacts</string>
    <string name="nilkanth_hostel">Nilkanth Hostel</string>
    <string name="shreedeep_hostel">Shreedeep Hostel</string>
    <string name="nisarg_hostel">Nisarg Hostel</string>
    <string name="total_rooms_13">Total Rooms : 13</string>
    <string name="no">No.</string>
    <string name="fees">Fees</string>
    <string name="types_of_room">Types Of Room</string>
    <string name="not_available">Not Available</string>
    <string name="non_ac">Non-AC</string>
    <string name="ac">AC</string>
    <string name="ohm_hostel">Ohm Hostel</string>
    <string name="ashirwad_hostel">Ashirwad Hostel</string>
    <string name="ohm_rooms">Ohm Rooms</string>
    <string name="ohm_dining">Ohm Dining</string>
    <string name="ohm_fees">Ohm Fees</string>
    <string name="ohm_address">Ohm Address</string>
    <string name="ohm_special_facilities">Ohm Special Facilities</string>
    <string name="ohm_contact">Ohm Contact</string>
    <string name="ashirwad_rooms">Ashirwad Rooms</string>
    <string name="ashirwad_dining">Ashirwad Dining</string>
    <string name="ashirwad_fees">Ashirwad Fees</string>
    <string name="ashirwad_address">Ashriwad Address</string>
    <string name="ashirwad_special_facilities">Ashirwad Special Facilities</string>
    <string name="ashirwad_contact">Ashirwad Contact</string>
    <string name="super_delux">Super Delux</string>
    <string name="delux">Delux</string>
    <string name="_2_bed_ac">2 Bed Ac</string>
    <string name="_2_bed_non_ac">2 Bed Non-AC</string>
    <string name="address">Address</string>
    <string name="nisarg_contact">Nisarg Contact</string>
    <string name="main_act">Welcome To Changa Hostels</string>
    <string name="facility_name">Facility Name</string>
    <string name="gym">Gym</string>
    <string name="playground">Playground</string>
    <string name="pool">Swimming Pool</string>
</resources>
