<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backbg"
    tools:context=".nlk">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nilkanth_hostel"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/nlkrooms"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/nilkanth_rooms"
        android:src="@drawable/room_icon" />

    <Button
        android:id="@+id/nlkroom"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/nlkrooms"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_btn"
        android:contentDescription="@string/nilkanth_room"
        android:text="@string/rooms" />

    <ImageView
        android:id="@+id/nlkspecialfacilitiess"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/nilkanth_special_facilities"
        android:src="@drawable/specialfacilities_icon" />

    <Button
        android:id="@+id/nlkspecialfacilities"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="190dp"
        android:background="@drawable/custom_btn"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/nlkspecialfacilitiess"
        android:contentDescription="@string/nilkanth_special_facilities"
        android:text="@string/special_facilities" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/nlkfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/nilkanth_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/nlkaddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/nilkanth_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/nlkfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/nlkfeess"
            android:contentDescription="@string/nilkanth_fees"
            android:text="@string/fees"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/nlkaddress"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/nlkaddresss"
            android:contentDescription="@string/nilkanth_address"
            android:text="@string/address"
            tools:ignore="UnknownId" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/nlkcontactss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/nilkanth_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/nlkcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/nlkcontactss"
            android:contentDescription="@string/nilkanth_contact"
            android:text="@string/contact" />
    </RelativeLayout>



</LinearLayout>