<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/backbg"
    tools:context=".ohm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ohm_hostel"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ohmrooms"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_rooms"
            android:src="@drawable/room_icon" />
        <Button
            android:id="@+id/ohmroom"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ohmrooms"
            android:contentDescription="@string/ohm_rooms"
            android:text="@string/rooms"
            tools:ignore="UnknownId" />

        <ImageView
            android:id="@+id/ohmspecialfacilitiess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_special_facilities"
            android:src="@drawable/specialfacilities_icon" />

        <Button
            android:id="@+id/ohmspecialfacilities"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ohmspecialfacilitiess"
            android:contentDescription="@string/ohm_special_facilities"
            android:text="@string/special_facilities" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ohmfeess"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_fees"
            android:src="@drawable/fees_icon" />

        <ImageView
            android:id="@+id/ohmaddresss"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_address"
            android:src="@drawable/address_icon" />

        <Button
            android:id="@+id/ohmfees"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ohmfeess"
            android:contentDescription="@string/ohm_fees"
            android:text="@string/fees" />

        <Button
            android:id="@+id/ohmaddress"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="190dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ohmaddresss"
            android:contentDescription="@string/ohm_address"
            android:text="@string/address" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ohmcontacts"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ohm_contact"
            android:src="@drawable/contact_icon" />

        <Button
            android:id="@+id/ohmcontact"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ohmcontacts"
            android:contentDescription="@string/ohm_contact"
            android:text="@string/contact" />
    </RelativeLayout>

</LinearLayout>